# infantry_aimbot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yaml  build_eol.yaml  lint.yaml
cmake/: CheckCppStd.cmake  ColorPrint.cmake  DependencyGraph.cmake
config/: camera.toml
modules/: CMakeLists.txt
modules/daheng_cam/: CMakeLists.txt
modules/daheng_cam/include/daheng_cam/: camera_interface.hpp  daheng.hpp
modules/daheng_cam/include/daheng_cam/gxapi/: DxImageProc.h  GxIAPI.h
modules/daheng_cam/src/: daheng.cc
modules/param_manager/: CMakeLists.txt
modules/param_manager/include/: param_manager.hpp
modules/param_manager/src/: param_manager.cc
scripts/: calibrate_camera.sh  foxglove_up.sh  run.sh  setup_env.sh
src/: main.cc
src/infantry_aimbot/: CMakeLists.txt  package.xml
src/infantry_aimbot/config/: gen_rosparams.py  settings.yaml
src/infantry_aimbot/include/: params.hpp  typedefs.hpp
src/infantry_aimbot/include/detection/: number_classifier.hpp  pipeline.hpp  pnp_solver.hpp  traditional_detector.hpp  visualization.hpp
src/infantry_aimbot/include/detector/: number_classifier.hpp  pnp_solver.hpp  traditional_detector.hpp
src/infantry_aimbot/include/ros/: node.hpp  params_manager.hpp  publisher_pool.hpp
src/infantry_aimbot/launch/: ia.launch.py
src/infantry_aimbot/libs/: CMakeLists.txt
src/infantry_aimbot/libs/daheng_cam/: CMakeLists.txt
src/infantry_aimbot/libs/daheng_cam/include/daheng_cam/: daheng.hpp  daheng_ext_trig.hpp  typedefs.hpp
src/infantry_aimbot/libs/daheng_cam/src/: daheng.cc  daheng_ext_trig.cc
src/infantry_aimbot/libs/outcome/: CMakeLists.txt
src/infantry_aimbot/src/: main.cc
src/infantry_aimbot/src/detection/: number_classifier.cc  pnp_solver.cc  traditional_detector.cc
src/infantry_aimbot/src/detector/: number_classifier.cc  pnp_solver.cc  traditional_detector.cc
